--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,10 @@ dependencies {
 
     //lottie
     implementation "com.airbnb.android:lottie:3.4.1"
+
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
 }
